k8s/gateway-service/gate-way-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gate-way
  namespace: uber
  labels:
    app: gate-way
    env: dev
    tier: backend
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: gate-way
      env: dev
      tier: backend
  template:
    metadata:
      labels:
        app: gate-way
        env: dev
        tier: backend
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      tolerations:
        - key: "uberonly"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: disktype
                    operator: In
                    values:
                      - ssd
      containers:
        - name: gateway-container
          image: docdon0007/apigateway:03
          ports:
            - containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: false
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 10
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
