k8s/gateway-service/gate-way-service.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: gate-way-service
  namespace: uber
spec:
  type: ClusterIP
  selector:
   app: gate-way
  ports:
   - port: 3000
     targetPort: 3000
